# Jpeger

./: CMakeLists.txt
cmake/: dependency.cmake  test-dependency.cmake
data/config/: test.json
data/image/test/: download.txt
report/: report.md
src/: Benchmark.cc  CMakeLists.txt  main.cc
src/DataStructure/: CMakeLists.txt  Color.cc  Color.hpp  ColorTest.cc  Common.hpp
src/IO/: CMakeLists.txt  ImageIO.cc  ImageIO.hpp
src/Jpeger/: CMakeLists.txt  Jpeger.cc  Jpeger.hpp  ZigZagTest.cc
src/LosslessCompress/: BitStream.cc  BitStream.hpp  CMakeLists.txt  LosslessCompress.cc  LosslessCompress.hpp  LosslessCompressTest.cc
src/Quantization/: CMakeLists.txt  Quantization.cc  Quantization.hpp
src/Transformation/: CMakeLists.txt  Transformation.cc  Transformation.hpp  TransformationTest.cc
